# beauty-ingredient-verifier

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  PRODUCTION.md  README.md  docker-compose.pipeline.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: backend-deploy.yml
backend/: Dockerfile  Dockerfile.pipeline  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260617_0001_initial.py  20260618_0002_source_fusion.py  20260618_0003_source_record_facts.py  20260618_0004_integrity_and_lookup_indexes.py  20260618_0005_prod_sync_runs.py  20260619_0006_widen_ingredient_names.py  20260619_0007_widen_source_fusion_text.py  20260619_0008_make_source_record_fact_lookup_nonunique.py  20260619_0009_add_sync_watermark_indexes.py
backend/app/: __init__.py  cli.py  config.py  main.py  observability.py  schemas.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/routers/: catalog.py  health.py  imports.py  ingredients.py  risk.py  scan.py  sources.py
backend/app/services/: adverse_events.py  codes.py  data_sync.py  enrichment.py  image_index.py  ml.py  normalization.py  product_corrections.py  profile_options.py  risk.py  risk_rules_library.py  scanner.py  search.py  source_fusion.py  source_records.py  vector_store.py
backend/app/services/importers/: __init__.py  ewg_parser.py  ewg_public_scraper.py  ewg_skin_deep.py  ewg_wayback.py  open_beauty_facts.py
backend/tests/: conftest.py  test_api_contract.py  test_audit_regressions.py  test_cli.py  test_data_sync.py  test_ewg_parser.py  test_ewg_scraper.py  test_importer.py  test_ml_stack.py  test_normalization.py  test_observability.py  test_risk_rules.py  test_scan.py
deploy/: Caddyfile
docs/: research-sources.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/__tests__/: api.test.ts  (+6 more)
scripts/: dev.sh
(+21 files in other folders)
